# recoin-qt

./: .gitmodules  CMakeLists.txt  CryptoNoteWallet.cmake  README.md
src/gui/ui/: aboutdialog.ui
src/images/: cryptonote.icns
